# fornero

./: .gitignore  README.md  SCHEMA_VALIDATION_SUMMARY.md  pyproject.toml  run_readme_example.py  unused-imports-summary.md
.cursor/rules/: code-style.mdc  expository-writing.mdc
.github/workflows/: tests.yml
design-docs/: ARCHITECTURE.md  CLEANUP.md  IMPLEMENTATION.md  TESTING.md
design-docs/cleanup-results/: agent-1-algebra-semantics.md  agent-10-defensive-algebra-core.md  agent-10-defensive-code-algebra-core.md  agent-11-defensive-code-translator-executor.md  agent-11-defensive-translator-executor.md  agent-2-spreadsheet-semantics.md  agent-2-spreadsheet-translation-semantics.md  agent-3-executor-semantics.md  agent-4-unused-imports-core-algebra.md  agent-5-unused-imports-translator-executor.md  agent-6-unused-imports-spreadsheet-utils.md  agent-7-packing-algebra.md  agent-7-packing-unpacking-algebra.md  agent-8-packing-translator.md  agent-8-packing-unpacking-translator.md  agent-9-packing-executor-spreadsheet.md  agent-9-packing-unpacking-executor-spreadsheet.md
examples/: dataframe_demo.py  end_to_end_demo.py  executor_demo.py  schema_validation_demo.py
src/fornero/: __init__.py  compiler.py  exceptions.py
tests/: conftest.py  test_algebra.py  test_algebra_eager.py  test_correctness.py  test_dataframe.py  test_executor.py  test_known_issues.py  test_schema_validation.py  test_spreadsheet.py  test_translator.py  test_utils.py
tests/helpers/: comparison.py  mock_executor.py
tests/programs/: __init__.py  p01_identity.py  p02_select_columns.py  p03_filter_rows.py  p04_sort_single.py  p05_sort_multi.py  p06_head_limit.py  p07_computed_column.py  p08_filter_then_select.py  p09_select_then_sort.py  p10_inner_join.py  p11_left_join.py  p12_groupby_sum.py  p13_groupby_multi_agg.py  p14_filter_join_select.py  p15_join_groupby.py  p16_union_vertical.py  p17_computed_then_filter.py  p18_multi_step_pipeline.py  p19_join_filter_groupby_sort.py  (+3 more)
(+27 files in other folders)
