[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fornero"
version = "0.1.0"
description = "A compiler that converts dataframe-based programs to Google Sheets spreadsheets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fornero Contributors"}
]
keywords = ["dataframe", "spreadsheet", "google-sheets", "pandas", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pandas>=1.3.0",
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.5.0",
    "typing-extensions>=4.0.0",
    "formualizer>=0.4",
]

[project.urls]
Homepage = "https://github.com/fornero/fornero"
Documentation = "https://github.com/fornero/fornero#readme"
Repository = "https://github.com/fornero/fornero"
"Bug Tracker" = "https://github.com/fornero/fornero/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fornero = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
